bugfix - fix container overflow

--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ hr {
 }
 
 .container-sm {
-  max-width: max-content;
-  min-width: 350px;
+  width: min-content;
+  min-width: max-content;
+  max-width: 95vw;
   min-height: 360px;
   padding: 1rem;
   box-shadow: 1px 1px 1px lightgray;
@@ -437,10 +438,9 @@ hr {
   background: white;
   width: max-content;
   height: max-content;
+  border-radius: 0.3rem;
   box-shadow: 1px 1px 2px lightgray;
 }
-
-
 
 .dialog-header {
   font-size: 1.2rem;
